second commit, to change the h4 Todo app name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
       <div class="app">
-            <h4 class="mb-3">TODO App22</h4>
+            <h4 class="mb-3">TODO App</h4>
 
 
             <div id="addNew" data-bs-toggle="modal" data-bs-target="#form">
